Prevent q-table__top from shrinking to 0 height on mobile Safari

--- a/ui/src/components/table/QTable.styl
+++ b/ui/src/components/table/QTable.styl
@@ -60,6 +60,7 @@
 
   &__top
     padding: 12px 16px
+    flex-shrink: 0
     .q-table__control
       flex-wrap: wrap
 
